--- a/pom.xml
+++ b/pom.xml
@@ -322,6 +322,18 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <mavenExecutorId>forked-path</mavenExecutorId>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
+                    <preparationGoals>clean test</preparationGoals>
+                    <releaseProfiles>release-profile,release</releaseProfiles>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
@@ -334,6 +346,13 @@
                         <artifactId>maven-assembly-plugin</artifactId>
                         <configuration>
                             <finalName>${project.artifactId}-${project.version}</finalName>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <configuration>
+                            <goals>package assembly:single</goals>
                         </configuration>
                     </plugin>
                 </plugins>
