--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.graylog</groupId>
     <artifactId>graylog-collector</artifactId>
-    <version>0.4.2</version>
+    <version>0.4.2-SNAPSHOT</version>
     <description>The Graylog Collector</description>
     <organization>
         <name>Graylog, Inc.</name>
@@ -26,7 +26,7 @@
         <connection>scm:git:git@github.com:Graylog2/collector.git</connection>
         <developerConnection>scm:git:git@github.com:Graylog2/collector.git</developerConnection>
         <url>https://github.com/Graylog2/collector</url>
-      <tag>0.4.2</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
