--- a/pom.xml
+++ b/pom.xml
@@ -199,8 +199,8 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.10.19</version>
+            <artifactId>mockito-core</artifactId>
+            <version>2.0.50-beta</version>
             <scope>test</scope>
         </dependency>
         <dependency>
